objects/LAT_BR_TAA__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AttachmentDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientAN8__c</fullName>
        <formula>Visit__r.Codigo_AN8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCorporateName__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Visit__r.Conta__c, Visit__r.Conta__r.Corporate_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Corporate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientObjectives__c</fullName>
        <label>Client Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TAA</relationshipLabel>
        <relationshipName>TAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentVisit__c</fullName>
        <label>Current Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoNotSendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do Not Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastVisit__c</fullName>
        <label>Last Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRBObjectives__c</fullName>
        <label>PRB Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>TAA</relationshipLabel>
        <relationshipName>TAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TAA</label>
    <nameField>
        <displayFormat>TAA-{0000}</displayFormat>
        <label>TAA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>